--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,8 @@
 [project]
-name = "biokit"
-version = "1.0"
+name = "bioplotkit"
+version = "1.0.0"
 dependencies = [
     "numpy","scipy","matplotlib","pandas", # Base dependency
-    "bed-reader", # For greader.py
     "adjustText", # For pcshow.py
 ]
 
@@ -12,4 +11,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/biokit"]
+packages = ["src/bioplotkit"]
