--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [project]
 name = "bioplotkit"
-version = "1.0.1"
+version = "1.0.2"
+description = "A Python package for advanced biological data visualization."
+readme = "README.md"
+requires-python = ">=3.7"
 dependencies = [
     "numpy","scipy","matplotlib","pandas", # Base dependency
     "adjustText", # For pcshow.py
